--- a/src/package.json
+++ b/src/package.json
@@ -3,5 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "repository": "https://github.com/TenaciousBen/ts-view-model-api-model-demo",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "typescript": "^3.3.3333"
+  }
 }
